--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.02002		2009-04-25
+					- Fixed version in Makefile.PL
+
+0.02001		2009-04-25
+					- Fixed some typos in the documentation.
+
 0.02000   2008-07-11
           - Added "diacritic" for rendering Pinyin text with
 					diacritic marks instead of numbers to represent
