--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.02003		2009-04-25
+					- More POD documentation formatting problems.
+
 0.02002		2009-04-25
 					- Fixed version in Makefile.PL
 
